--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <ttest-data-supplier.version>2.3.0</ttest-data-supplier.version>
         <podam.version>8.0.1.RELEASE</podam.version>
         <jackson-databind>2.16.1</jackson-databind>
+        <poi.version>5.3.0</poi.version>
     </properties>
 
     <dependencies>
@@ -49,11 +50,11 @@
             <version>${junit.jupiter.version}</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
             <version>${reflection.version}</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>br.com.six2six</groupId>
@@ -168,6 +169,18 @@
             <version>${jackson-databind}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.17.0</version> <!-- or any version >= 2.8.0 -->
+        </dependency>
 
     </dependencies>
 
